# senior_care_family

./: .gitignore  CLAUDE.md  README.md  pubspec.yaml
android/: settings.gradle.kts
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
assets/device_profiles/: SM-T500.json
docs/: AP spec.md  CHANGELOG.md  RTDB_schema.md  RTDB_test.md  aec_fix_report.md  audio_effects_rk3566_backup.xml  audio_effects_rk3566_modified.xml  datachannel-photo-transfer.md  device-info.md  monitoring_videocall_unify.md  project-structure.md  smart-frame-plan.md
functions/: index.js  package-lock.json  package.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/config/: app_config.dart
lib/screens/: device_list_screen.dart  family_detail_screen.dart  incoming_call_screen.dart  login_screen.dart  monitoring_screen.dart  outgoing_call_screen.dart  pairing_screen.dart  photo_upload_screen.dart  slideshow_screen.dart  video_call_screen.dart
lib/services/: auth_service.dart  face_detection_service.dart  family_service.dart  fcm_service.dart  photo_transfer_service.dart  signaling_service.dart  webrtc_service.dart
lib/widgets/: photo_frame_view.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
plugins/flutter_webrtc/android/src/main/jni/: CMakeLists.txt  rnnoise_jni.c
plugins/flutter_webrtc/android/src/main/jni/rnnoise/: os_support.h  vec.h
scripts/: provision_tablet.sh
test/: widget_test.dart
web/: index.html  manifest.json
web-test-caller/: index.html
windows/: CMakeLists.txt
(+21 files in other folders)
